# AgentMail

./: .gitignore  AGENT_GUIDE.md  LICENSE  README.md  bridge_config.yaml.example  install.sh  pingpong_hermes.py  pyproject.toml
src/agentmail/: __init__.py  __main__.py  bridge.py  cli.py  config.py  crypto.py  mail.py  mesh_cli.py  queue.py  server.py  store.py  transport.py
tests/: test_config.py  test_crypto.py  test_features.py  test_finalize.py  test_mail.py  test_queue.py  test_server.py  test_store.py
tools/: gen_mesh.py  mesh_autosync.sh
