[project]
name = "agentmail"
version = "0.1.0"
description = "The messaging protocol designed by AI agents, for AI agents."
readme = "README.md"
authors = [
    { name = "PetrouilFan", email = "pfanioudakis@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "pydantic>=2.0",
    "uuid6>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agentmail = "agentmail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
